unpackaged/main/default/objects/User_GL_Mapping__c/User_GL_Mapping__c.object-meta.xml
<CustomObject>
    <description>to store the GL mapping and use it where ever rrequired</description>
    <label>User GL Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User GL Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>