unpackaged/main/default/objects/User_GL_Mapping__c/fields/ETSALES_GL_Location__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_GL_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Location</label>
    <referenceTo>ETSALES_Location__c</referenceTo>
    <relationshipLabel>User GL Mappings</relationshipLabel>
    <relationshipName>User_GL_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>