unpackaged/main/default/objects/User_GL_Mapping__c/fields/GL_Zone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Zone</label>
    <referenceTo>GL_Zone__c</referenceTo>
    <relationshipLabel>User GL Mappings</relationshipLabel>
    <relationshipName>User_GL_Mappings</relationshipName>
    <type>Lookup</type>
</CustomField>