unpackaged/main/default/objects/User_GL_Mapping__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transport and Lease</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>