unpackaged/main/default/objects/User_GL_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>GL_Project__c</columns>
    <columns>ETSALES_GL_Location__c</columns>
    <columns>Sector__c</columns>
    <columns>GL_Department__c</columns>
    <columns>GL_Activity__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>